Changes for inventory multiple