@@ -10,6 +10,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import com.tulip.host.domain.ProductCatalog;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
@@ -71,20 +72,28 @@ public class ReportService {
     @Transactional
     public DashBoardStudentDTO studentReport() {
         BooleanBuilder admissionWeekCondition = new BooleanBuilder()
-            .and(QStudent.student.createdDate.goe(LocalDate.now().with(DayOfWeek.MONDAY).atStartOfDay()));
+            .and(QStudent.student.createdDate.goe(LocalDate.now()
+                .with(DayOfWeek.MONDAY)
+                .atStartOfDay()));
         BooleanBuilder admissionMonthCondition = new BooleanBuilder()
-            .and(QStudent.student.createdDate.goe(LocalDate.now().withDayOfMonth(1).atStartOfDay()));
+            .and(QStudent.student.createdDate.goe(LocalDate.now()
+                .withDayOfMonth(1)
+                .atStartOfDay()));
         BooleanBuilder withdrawnWeekCondition = new BooleanBuilder()
             .and(
                 QStudent.student.terminationDate
                     .isNotNull()
-                    .and(QStudent.student.terminationDate.goe(LocalDate.now().with(DayOfWeek.MONDAY).atStartOfDay()))
+                    .and(QStudent.student.terminationDate.goe(LocalDate.now()
+                        .with(DayOfWeek.MONDAY)
+                        .atStartOfDay()))
             );
         BooleanBuilder withdrawnMonthCondition = new BooleanBuilder()
             .and(
                 QStudent.student.terminationDate
                     .isNotNull()
-                    .and(QStudent.student.terminationDate.goe(LocalDate.now().withDayOfMonth(1).atStartOfDay()))
+                    .and(QStudent.student.terminationDate.goe(LocalDate.now()
+                        .withDayOfMonth(1)
+                        .atStartOfDay()))
             );
 
         return DashBoardStudentDTO
@@ -104,25 +113,22 @@ public class ReportService {
         return DashBoardStaffDTO
             .builder()
             .staffTypeCount(fetchStaffReport)
-            .staffCount(fetchStaffReport.entrySet().stream().mapToLong(x -> x.getValue()).sum())
+            .staffCount(fetchStaffReport.entrySet()
+                .stream()
+                .mapToLong(x -> x.getValue())
+                .sum())
             .build();
     }
 
     @Transactional
     public List<InventoryItemDTO> inventoryReport() {
-        List<Inventory> stockReport = inventoryRepository.stockReportWithIndex();
-        List<InventoryItemDTO> inventoryItemDTOS = inventoryMapper.toEntityList(stockReport);
-
-        if (inventoryItemDTOS.size() > 100) {
-            inventoryItemDTOS.parallelStream()
-                    .sorted((a, b) -> a.getProduct().getItemName().compareTo(b.getProduct().getItemName()))
-                    .collect(Collectors.toList());
-        } else {
-            Collections.sort(inventoryItemDTOS,
-                    (a, b) -> a.getProduct().getItemName().compareTo(b.getProduct().getItemName()));
-        }
-
-        return inventoryItemDTOS;
+        Map<ProductCatalog, List<Inventory>> catalogGrouped = inventoryRepository.findLatestInventoryByProductCatalogGrouped();
+        return catalogGrouped.entrySet()
+            .stream()
+            .map(entry -> {
+                return inventoryMapper.toAggregatedInventoryItemDTO(entry.getKey(), entry.getValue());
+            })
+            .toList();
     }
 
     @Transactional
@@ -133,7 +139,10 @@ public class ReportService {
     public Map<String, Integer> transportReport() {
         Session session = sessionService.currentSession();
         Map<String, List<Long>> report = studentToTransportRepository.findReport(session);
-        return report.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, item -> item.getValue().size()));
+        return report.entrySet()
+            .stream()
+            .collect(Collectors.toMap(Map.Entry::getKey, item -> item.getValue()
+                .size()));
     }
 
     public Map<String, Map<String, Double>> salesReport(java.time.LocalDate date) {
